<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@color/colorPrimary">

    <Button
        android:id="@+id/buttonClose"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="@null"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/text_16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="@null"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/text_blue"
        android:textSize="@dimen/text_16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonFolder"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@null"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_18sp"
        android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_down_24"
        android:drawableTint="@color/white"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toStartOf="@id/buttonNext"
        app:layout_constraintStart_toEndOf="@+id/buttonClose"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/app_name" />

</androidx.constraintlayout.widget.ConstraintLayout>