<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentScrim="?attr/colorPrimary"
        app:expandedTitleGravity="top"
        app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            app:layout_collapseMode="parallax">

            <include layout="@layout/toolbar_instagram_select_image" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <!-- Crop after capture -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="H,1:1"
            app:layout_constraintTop_toTopOf="parent">

            <com.yashoid.instacropper.InstaCropperView
                android:id="@+id/cropperViewAfterCapture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/layoutCrop"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="H,1:1"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/layoutAction"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/buttonGallery"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/camera_roll"
                android:textColor="@color/text_blue"
                android:textSize="@dimen/text_16sp" />

            <TextView
                android:id="@+id/buttonPhoto"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/photo"
                android:textColor="@color/text_gray"
                android:textSize="@dimen/text_16sp" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewPhoto"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:numColumns="2"
            app:layout_constraintBottom_toTopOf="@id/layoutAction"
            app:layout_constraintTop_toBottomOf="@id/layoutCrop"
            tools:layoutManager="GridLayoutManager"
            tools:listitem="@layout/item_instagram_photo"
            tools:spanCount="5" />

        <ImageView
            android:id="@+id/buttonScale"
            android:layout_width="@dimen/space_40dp"
            android:layout_height="@dimen/space_40dp"
            android:layout_margin="@dimen/space_16dp"
            android:src="@drawable/selector_instagram_scale"
            app:layout_constraintBottom_toBottomOf="@id/layoutCrop"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/buttonSelectMultiple"
            android:layout_width="@dimen/space_40dp"
            android:layout_height="@dimen/space_40dp"
            android:layout_margin="@dimen/space_16dp"
            android:src="@drawable/selector_instagram_multiple_selection"
            app:layout_constraintBottom_toBottomOf="@id/layoutCrop"
            app:layout_constraintEnd_toEndOf="@id/layoutCrop" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/bottomSheetFolder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:elevation="@dimen/space_4dp"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="0dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">


        <!-- Toolbar -->
        <include layout="@layout/toolbar_instagram_select_folder" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewFolder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:numColumns="2"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="4"
            tools:listitem="@layout/item_instagram_photo" />

    </LinearLayout>

    <TextView
        android:id="@+id/layoutEmpty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/picture_empty"
        app:layout_anchor="@+id/layoutContent"
        app:layout_anchorGravity="center" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>